src/Notification/Notification.scss
@import '../common.scss';

.root {
  position: relative;
}

.notification {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.label {
  max-width: 70%;
  margin-right: 12px;
}

.closeButton {
  position: absolute;
  right: 12px;
  display: flex;
  align-items: center;

  // because IE11 doesn't vertically align. this doesn't break other
  // browsers because nested <button> has explicit width/height
  height: 0;
}

/*Position*/

.relativePosition {
  position: relative;
  width: 100%;
}

.absolutePosition {
  position: absolute;
  right: 0;
  left: 0;
}

.fixedPosition {
  position: fixed;
  right: 0;
  width: 100%;
  top: 0;
}

/*Theme*/
.standardTheme { background-color: $B20; }
.errorTheme { background-color: $R20; }
.successTheme { background-color: $G20; }
.warningTheme { background-color: $Y10; }
.premiumTheme { background-color: $P20; }

/*Size*/

.smallSize { height: 42px; }
.bigSize { height: 54px; }

/*Animations*/
$easeOutQuint: cubic-bezier(0.23, 1, 0.32, 1);
$easeInOutSine: cubic-bezier(0.445, 0.05, 0.55, 0.95);

.notificationAnimationEnter {
  transition: all 0.4s cubic-bezier(0.895, 0.03, 0.685, 0.22);
  max-height: 0;

  .label {
    transition: all 0.4s $easeOutQuint 0.1s;
    opacity: 0;
    transform: translateY(-70px);
  }

  .button {
    transition: all 0.16s $easeOutQuint 0.2s;
    transform: scale(0.6);
    opacity: 0.5;
  }
}

.notificationAnimationEnterActive {
  max-height: 500px;

  .label {
    opacity: 1;
    transform: translateY(0);
  }

  .button {
    transform: scale(1);
    opacity: 1;
  }
}

.notificationAnimationExit {
  max-height: 500px;

  .label,
  .button,
  .closeButton {
    opacity: 1;
  }
}

.notificationAnimationExitActive {
  transition: all 0.25s $easeInOutSine 0.1s;
  max-height: 0;

  .label {
    transition: all 0.25s $easeInOutSine;
    opacity: 0.5;
    transform: translateY(-70px);
  }

  .button,
  .closeButton {
    transition: all 0.12s $easeInOutSine;
    opacity: 0;
  }
}

